fix font size and letter spacing

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -16,7 +16,8 @@
   padding-left: 1rem;
 }
 .about-title h4 {
-  letter-spacing: 0.5rem;
+  font-size: 1rem;
+  letter-spacing: 0.3rem;
 }
 .about-text {
   margin: 1rem;
@@ -45,16 +46,17 @@
     text-align: center;
   }
   .about-title h4 {
-    letter-spacing: 0.5rem;
+    font-size: 1rem;
+    letter-spacing: 0.3rem;
   }
   .about-text {
     margin: 1rem;
   }
 }
 @media (min-width: 768px) {
-  /* .about-container {
+  .about-container {
     margin: 2rem;
-  } */
+  }
   .about-imgTitle {
     display: flex;
     align-items: center;
@@ -68,6 +70,7 @@
     padding-left: 1rem;
   }
   .about-title h4 {
+    font-size: 1.2rem;
     letter-spacing: 0.5rem;
   }
   .about-text {
@@ -91,6 +94,7 @@
     padding-right: 1rem;
   }
   .about-title h4 {
+    font-size: 1.5rem;
     letter-spacing: 0.5rem;
   }
   .about-title h1 {
